# agentmux

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  desktop-dev.cmd  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package-lock.json  package.json  playwright.config.ts
apps/desktop/src/: App.tsx  fonts.css  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/agentmux/: AgentmuxTerminalApp.tsx  BrowserSurfacePanel.tsx  Hov.tsx  LiveTerminal.tsx  SplitHandle.tsx  actions.ts  agentmux.css  data.ts  i18n.ts  icons.tsx  theme.ts  uiZoom.ts  useAgentmuxControl.ts  (+1 more)
benches/: README.md
benches/high-output/: Cargo.toml  README.md
benches/high-output/src/: main.rs
benches/many-idle-sessions/: Cargo.toml  README.md
benches/many-idle-sessions/src/: main.rs
benches/resize-storm/: Cargo.toml  README.md
benches/resize-storm/src/: main.rs
benches/restart-recovery/: Cargo.toml  README.md
benches/restart-recovery/src/: main.rs
benches/single-terminal-latency/: Cargo.toml  README.md
benches/single-terminal-latency/src/: main.rs
benches/support/: Cargo.toml
benches/support/src/: lib.rs
crates/agentmux-backend/: Cargo.toml
crates/agentmux-backend-conpty/: Cargo.toml
crates/agentmux-backend-conpty/src/: lib.rs
crates/agentmux-backend-conpty/tests/: conpty_smoke.rs
crates/agentmux-backend-ssh/: Cargo.toml
crates/agentmux-backend-ssh/src/: lib.rs
crates/agentmux-backend-tmux/: Cargo.toml
crates/agentmux-backend-tmux/src/: lib.rs
crates/agentmux-backend-tmux/tests/: tmux_control_smoke.rs
crates/agentmux-backend-wsl/: Cargo.toml
crates/agentmux-backend-wsl/src/: lib.rs  pipe.rs
crates/agentmux-backend-wsl/tests/: wsl_direct_smoke.rs
crates/agentmux-backend/src/: lib.rs
crates/agentmux-browser/: Cargo.toml
crates/agentmux-browser/src/: lib.rs
crates/agentmux-cli/: Cargo.toml
crates/agentmux-cli/src/: cmux.rs  lib.rs  main.rs
crates/agentmux-core/: Cargo.toml
crates/agentmux-core/src/: lib.rs
crates/agentmux-core/tests/: control_conpty_smoke.rs
crates/agentmux-ipc/: Cargo.toml
crates/agentmux-ipc/src/: lib.rs
crates/agentmux-store/: Cargo.toml
crates/agentmux-store/src/: lib.rs
crates/agentmux-telemetry/: Cargo.toml
crates/agentmux-telemetry/src/: lib.rs
docs/: README.md  features.md  ieee-29148-desktop-performance-optimization.md  release-policy.md
docs/development/: bootstrap-windows.md
docs/en/: README.md  features.md  ieee-29148-desktop-performance-optimization.md  ieee-29148-system-design.md
docs/en/backlog/: README.md  platform-backlog.md
docs/en/operations/: README.md  main-merge-policy.md  release-runbook.md
docs/en/release/: versioning.md
docs/en/schemas/: agentmux.config.schema.json
docs/en/user/: README.md  getting-started.md  known-limitations.md  manual.md  troubleshooting.md
docs/implementation/: 01-runtime-architecture.md  02-windows-wsl-session-backends.md  03-control-plane-api.md  04-ui-terminal-rendering.md  06-testing-and-release-plan.md  11-goal-3-wsl-direct-status.md  12-goal-4-durable-tmux-status.md  14-goal-6-control-plane-cli-status.md  15-goal-7-agent-notifications-status.md  16-goal-8-browser-surface-automation-status.md  17-goal-9-performance-diagnostics-status.md  18-goal-9-release-candidate-checklist.md  20-goal-10-setup-config-status.md  22-goal-12-cli-sidebar-metadata-status.md  23-overall-completion-goal-groups.md  25-goal-15-workspace-groups-status.md  26-goal-16-server-mode-web-terminal-status.md  27-goal-17-terminal-live-stream-design.md  28-goal-18-p2-installed-server-mode-release-gate.md  README.md
docs/implementation/evidence/: README.md
docs/ko/: README.md  features.md  release-policy.md
docs/ko/implementation/: 00-implementation-roadmap.md  01-runtime-architecture.md  02-windows-wsl-session-backends.md  05-performance-and-observability.md  07-repo-scaffold-and-first-tasks.md  08-goal-groups.md  09-goal-1-native-terminal-slice-status.md  10-goal-2-persistence-status.md  12-goal-4-durable-tmux-status.md  13-goal-5-workspace-pane-ux-status.md  14-goal-6-control-plane-cli-status.md  17-goal-9-performance-diagnostics-status.md  18-goal-9-release-candidate-checklist.md  19-cmux-windows-parity-gap-analysis.md  20-goal-10-setup-config-status.md  21-goal-11-action-registry-status.md  23-overall-completion-goal-groups.md  24-goal-14-tmux-compat-status.md  29-installed-lifecycle-e2e-release-closure.md  README.md
docs/ko/release-evidence/: 0.1.3.md
docs/operations/: main-merge-policy.md  release-runbook.md
docs/release-evidence/: 0.1.3.md
docs/user/: cli.md  getting-started.md  troubleshooting.md
skills/agentmux-control/: SKILL.md
skills/agentmux-control/agents/: openai.yaml
skills/agentmux-control/references/: control-workflows.md
tests/fixtures/: README.md
tests/fixtures/control-plane/: session-spawn-request.json  session-spawn-response.json  unauthorized-response.json
tests/fixtures/ipc/: README.md
tests/fixtures/tmux-control/: README.md  output-escapes.txt  simple-command.txt  topology-events.txt
tests/integration/: README.md
tools/: bootstrap-windows.ps1  check-doc-links.mjs  check-repo-hygiene.mjs  check-version.mjs  check.ps1  install-agentmux-skill.ps1  prepare-desktop-bundle-binaries.ps1  run-browser-cdp-smoke.ps1  run-desktop-tauri-build.ps1  run-desktop-ui-gates.ps1  run-installed-app-smoke.ps1  run-installer-build-smoke.ps1  run-installer-contents-gate.ps1  run-installer-lifecycle-gate.ps1  run-integration-live-smoke.ps1  run-packaged-diagnostics-smoke.ps1  run-performance-gates.ps1  run-release-readiness-audit.ps1  run-server-mode-smoke.ps1  run-tauri-basic-ui-smoke.mjs  run-tmux-reattach-smoke.ps1  run-wsl-state-gate.ps1  set-version.mjs
(+224 files in other folders)
