[package]
name = "agentmux-bench-high-output"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
agentmux-bench-support = { path = "../support" }
serde = { version = "1", features = ["derive"] }
