[package]
name = "agentmux-bench-support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
agentmux-backend = { path = "../../crates/agentmux-backend" }
agentmux-backend-conpty = { path = "../../crates/agentmux-backend-conpty" }
agentmux-core = { path = "../../crates/agentmux-core" }
agentmux-ipc = { path = "../../crates/agentmux-ipc" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
] }
