[package]
name = "agentmux-backend-conpty"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
agentmux-backend = { path = "../agentmux-backend" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_Console",
  "Win32_System_IO",
  "Win32_System_Pipes",
  "Win32_System_Threading",
] }
