[package]
name = "agentmux-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
agentmux-backend = { path = "../agentmux-backend" }
agentmux-ipc = { path = "../agentmux-ipc" }
base64 = "0.22"
serde_json = "1"

[target.'cfg(windows)'.dev-dependencies]
agentmux-backend-conpty = { path = "../agentmux-backend-conpty" }
